# -maci-elyria-seam-pilot14

./: .gitignore  API_REFERENCE.md  ASSURANCE_ROADMAP.md  AUTHORS.md  AUTH_RBAC.md  A_PLUS_ACCEPTANCE_CRITERIA.md  A_PLUS_BENCHMARK_READOUT.md  BADGES.md  BENCHMARK_SCORECARD.md  BUYER_REVIEW_GUIDE.md  CLAIMS_BOUNDARY.md  CLAIMS_LANGUAGE_LOCK.md  CLAIM_BOUNDARY.md  COMMERCIAL_BOUNDARY.md  CRYPTOGRAPHIC_RECEIPTS.md  DEMO_RUNBOOK.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_SECURITY_CHECKLIST.md  Dockerfile.txt  FINAL_PUBLIC_POSITIONING.md  FORMAL_PROOF_ROADMAP.md  FULLSTACK_ARCHITECTURE.md  FULL_STACK_SURFACE.md  GOLDEN_CORRIDOR_README.md  INDEPENDENT_VERIFIER.md  INTERFACE_CONTRACT.md  KEY_MANAGEMENT.md  LICENSE.txt  Makefile.txt  OPENAPI.md  OPERATIONS_RUNBOOK.md  OWNERSHIP_NOTICE.md  PERSISTENT_AUDIT_LEDGER.md  PERSISTENT_RECEIPT_STORE.md  PRIVATE_ENGINE_CONTRACT.md  PRODUCT.md  PRODUCTION_LANE_BOUNDARY.md  PRODUCTION_READINESS.md  PRODUCTION_RUNTIME_READY (1).md  PRODUCTION_SIGNING_ADAPTER.md  (+33 more)
api/: app.py
deployment/: CUSTOMER_ACCEPTANCE_TESTS.md  DEPLOYMENT_RUNBOOK.md  INCIDENT_RESPONSE_RUNBOOK.md  ROLLBACK_RUNBOOK.md  docker-compose.production.yml
docs/: api_examples.md  architecture.md  production-candidate-reviewer-artifacts.md  proof_cases.md  reviewer_quickstart.md  visual_direction.md
examples/: changed_context_packet.json  missing_authority_packet.json  no_bind_attempt_packet.json  uncertain_language_packet.json  valid_signal_packet.json
external-verifier/: README.md  verify_a_plus_bundle.py  verify_bundle.py  verify_claim_boundary.py  verify_no_bind.py  (+4 more)
(+53 files in other folders)
